bug(sidebar):fix the spacing issue when the percent is at 100

--- a/pokeapp/src/styling/components/_badge-sidebar.scss
+++ b/pokeapp/src/styling/components/_badge-sidebar.scss
@@ -108,6 +108,7 @@
 .progress-container {
   padding-top: 5px;
   padding-left: 9px;
+  padding-right: 10px;
   height: 50%;
   display: flex;
   align-items: flex-start;
